minor improvements to flow and copy and "statement" links

--- a/script/build
+++ b/script/build
@@ -1,19 +1,22 @@
 #! /bin/sh
 
-echo '<!doctype html>' > index.html
-echo '<html>' >> index.html
-echo '<head>' >> index.html
-echo '<title>Project Euler</title>' >> index.html
-echo '<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">' >> index.html
-echo '<link rel="stylesheet" href="style.css">' >> index.html
-echo '</head>' >> index.html
-echo '<body>' >> index.html
-echo '<h1>Project Euler</h1>' >> index.html
+echo '<!doctype html>'
+echo '<html>'
+echo '<head>'
+echo '<title>Project Euler</title>'
+echo '<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">'
+echo '<link rel="stylesheet" href="style.css">'
+echo '</head>'
+echo '<body>'
+echo '<h1>Project Euler</h1>'
 for n in `ls src | grep '\.lhs' | cut -d '.' -f 1`; do
-  echo '<div class="solution" id="'$n'">' >> index.html
-  echo '<h2><a href="#'$n'"><span class="hash"># </span>'$n'</a></h2>' >> index.html
-  pandoc -f markdown+lhs -t html src/$n.lhs >> index.html
-  echo '</div>' >> index.html
+  echo '<div class="solution" id="'$n'">'
+  echo '<div class="solution-title">'
+  echo '<h2><a href="#'$n'"><span class="hash"># </span>'$n'</a></h2>'
+  echo '<span class="statement"><a href="https://projecteuler.net/problem='$n'">[statement]</a></span>'
+  echo '</div>'
+  pandoc -f markdown+lhs -t html src/$n.lhs
+  echo '</div>'
 done
-echo '</body>' >> index.html
-echo '</html>' >> index.html
+echo '</body>'
+echo '</html>'
