--- a/script/build
+++ b/script/build
@@ -1,22 +1,23 @@
 #! /bin/sh
 
-echo '<!doctype html>'
-echo '<html>'
-echo '<head>'
-echo '<title>Project Euler</title>'
-echo '<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">'
-echo '<link rel="stylesheet" href="style.css">'
-echo '</head>'
-echo '<body>'
-echo '<h1>Project Euler</h1>'
+echo   '<!doctype html>'
+echo   '<html>'
+echo   '<head>'
+echo   '  <title>Project Euler</title>'
+echo   '  <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">'
+echo   '  <link rel="stylesheet" href="style.css">'
+echo   '</head>'
+echo   '<body>'
+echo   '  <h1>Project Euler</h1>'
+echo   '  <p>Solutions to the problems on <a href="https://projecteuler.net/">projecteuler.net</a> written in <a href="https://wiki.haskell.org/Literate_programming">Literate Haskell</a>. Source can be found <a href="https://github.com/hot-leaf-juice/project-euler/tree/master/src">here</a>. Clone it and feed it to <code>ghci</code>!</p>'
 for n in `ls src | grep '\.lhs' | cut -d '.' -f 1`; do
-  echo '<div class="solution" id="'$n'">'
-  echo '<div class="solution-title">'
-  echo '<h2><a href="#'$n'"><span class="hash"># </span>'$n'</a></h2>'
-  echo '<span class="statement"><a href="https://projecteuler.net/problem='$n'">[statement]</a></span>'
-  echo '</div>'
-  pandoc -f markdown+lhs -t html src/$n.lhs
-  echo '</div>'
+  echo '  <div class="solution" id="'$n'">'
+  echo '    <div class="solution-title">'
+  echo '      <h2><a href="#'$n'"><span class="hash"># </span>'$n'</a></h2>'
+  echo '      <span class="statement"><a href="https://projecteuler.net/problem='$n'">[statement]</a></span>'
+  echo '    </div>'
+  pandoc -f markdown+lhs -t html src/$n.lhs | awk '{print "    ", $0}'
+  echo '  </div>'
 done
-echo '</body>'
-echo '</html>'
+echo   '</body>'
+echo   '</html>'
