fix google fonts import

--- a/script/build
+++ b/script/build
@@ -4,12 +4,14 @@ echo   '<!doctype html>'
 echo   '<html>'
 echo   '<head>'
 echo   '  <title>Project Euler</title>'
-echo   '  <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">'
-echo   '  <link rel="stylesheet" href="style.css">'
+echo   '  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro|Source+Serif+Pro" rel="stylesheet">'
+echo   '  <link href="style.css" rel="stylesheet">'
 echo   '</head>'
 echo   '<body>'
 echo   '  <h1>Project Euler</h1>'
-echo   '  <p>Solutions to the problems on <a href="https://projecteuler.net/">projecteuler.net</a> written in <a href="https://wiki.haskell.org/Literate_programming">Literate Haskell</a>. Source can be found <a href="https://github.com/hot-leaf-juice/project-euler/tree/master/src">here</a>. Clone it and feed it to <code>ghci</code>!</p>'
+echo   '  <div class="intro">'
+echo   '    <p>Solutions to the problems on <a href="https://projecteuler.net/">projecteuler.net</a> written in <a href="https://wiki.haskell.org/Literate_programming">Literate Haskell</a>. Source can be found <a href="https://github.com/hot-leaf-juice/project-euler/tree/master/src">here</a>. Clone it and feed it to <code>ghci</code>!</p>'
+echo   '  </div>'
 for n in `ls src | grep '\.lhs' | cut -d '.' -f 1`; do
   echo '  <div class="solution" id="'$n'">'
   echo '    <div class="solution-title">'
