--- a/script/build
+++ b/script/build
@@ -18,7 +18,7 @@ for n in `ls src | grep '\.lhs' | cut -d '.' -f 1`; do
   echo '      <h2><a href="#'$n'"><span class="hash"># </span>'$n'</a></h2>'
   echo '      <span class="statement"><a href="https://projecteuler.net/problem='$n'">[statement]</a></span>'
   echo '    </div>'
-  pandoc -f markdown+lhs -t html src/$n.lhs | awk '{print "    ", $0}'
+  pandoc -f markdown+lhs -t html src/$n.lhs
   echo '  </div>'
 done
 echo   '</body>'
